<resources>
    <string name="app_name">Pills</string>
    <string name="main_reminder_title">Vos rappels du jour</string>
    <string name="medicine_add_title">Renseigner les informations sur votre médicament</string>
    <string name="medicine_nom">Nom du médicament*</string>
    <string name="medicine_type">Type de prise</string>
    <string name="medicine_stock">Quantité du médicament</string>
    <string name="medicine_fabricant">Fabricant</string>
    <string name="button_valider">Valider</string>
    <string name="reminder">Rappels</string>
    <string name="button_creer_rappel">+ Ajouter un rappel</string>
    <string name="button_supprimer">Supprimer</string>
    <string name="button_modifier">Modifier</string>
    <string name="medicine_list_title">Vos médicaments enregistrés</string>
    <string name="button_ajouter">Ajouter</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="aujourd_hui">Aujourd\'hui</string>
    <string name="mes_medicaments">Mes médicaments</string>
    <string name="mes_rappels">Mes rappels</string>
    <string name="champs_obligatoires">*champs obligatoires</string>
    <string name="donnees_perso">Données Personnelles</string>
    <string name="data_title">Vos données personnelles</string>
    <string name="data_consulter_description">Vous pouvez consulter l\'ensemble de vos données sauvegardées.</string>
    <string name="data_consulter_button">Consulter mes données</string>
    <string name="data_delete_description">Vous pouvez supprimer l\'ensemble de vos données. Une fois supprimées, les données ne peuvent pas être récupérées.</string>
    <string name="data_delete_button">Supprimer toutes mes données</string>
    <string name="donnees_enregistrees_list">Vos données enregistrées</string>
    <string name="formulaire_rappel_titre">Renseigner les informations sur le rappel</string>
    <string name="heure_rappel_formulaire">Heure du rappel*</string>
    <string name="repetition_rappel_form1">Répéter le rappel tous les</string>
    <string name="repetition_rappel_form_jours">jours</string>
    <string name="repetition_rappel_form_legende">Laissez le champ vide pour une répétition quotidienne</string>
    <string name="rappels_enregistres">Vos rappels enregistrés</string>
    <string name="heure">Heure</string>
    <string name="valider_la_prise">Valider la prise</string>
</resources>
