<?xml version="1.0" encoding="utf-8"?>

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    tools:context=".MedicineAddActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- Toolbar -->
        <android.support.v7.widget.Toolbar
            android:id="@+id/activity_main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:theme="@style/ToolBarStyle" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/medicine_add_tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_add_title"
                android:textAlignment="viewStart"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/medicine_add_tv_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_nom"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/medicine_add_et_nom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/medicine_add_tv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_type"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/medicine_add_et_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp"
                android:autofillHints="" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/medicine_add_tv_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_stock"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/medicine_add_et_stock"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <TextView
                android:id="@+id/medicine_add_tv_fabricant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medicine_fabricant"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/medicine_add_et_fabricant"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="17sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="25dp" />

            <Button
                android:id="@+id/medicine_add_button_valider"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="120dp"
                android:layout_marginRight="120dp"
                android:layout_marginBottom="10dp"
                android:background="@color/colorPrimary"
                android:text="@string/button_valider"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/medicine_add_tv_error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/champs_obligatoires"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/drawer_view"
        app:headerLayout="@layout/nav_header"/>

</android.support.v4.widget.DrawerLayout>